#11942: Restoring JAVA_OPTS